<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.helfholz.muetze187.vatertag2017.MainActivity">



    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewTeams"
        android:layout_alignParentStart="true"
        android:divider="@android:color/holo_orange_dark"
        android:dividerHeight="4dp"
        android:layout_toStartOf="@+id/textView"
        android:layout_below="@+id/textViewDateTime"
        android:layout_above="@+id/buttonSpeichern"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_e_t_t"
        android:id="@+id/textViewFett"
        android:width="200dp"
        android:height="80dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="48sp"
        android:clickable="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDateTime"
        android:width="100dp"
        android:height="80dp"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:layout_alignTop="@+id/textViewFett"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_orange_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/listViewTeams"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_adelheid"
        android:id="@+id/textView2"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/textViewFett"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp" />

    <SeekBar
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarMusic"
        android:thumb="@drawable/schweinrechts2"
        android:progressBackgroundTint="#ffaaab"
        android:layout_above="@+id/textView2"
        android:layout_toEndOf="@+id/textViewFett" />


    <ImageButton
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:id="@+id/prev"
        android:scaleType="center"
        android:background="@drawable/ic_backwards"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textViewFett"
        android:contentDescription="@string/backwards" />

    <Spinner
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/seekBarMusic"
        android:layout_alignEnd="@+id/shuffle"
        android:layout_toEndOf="@+id/textViewFett" />

    <Button
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/speichern"
        android:id="@+id/buttonSpeichern"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView2" />

    <ImageButton
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:id="@+id/play"
        android:scaleType="center"
        android:background="@drawable/ic_play"
        android:contentDescription="@string/starts_music"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/prev"
        android:layout_toEndOf="@+id/prev" />

    <ImageButton
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:id="@+id/next"
        android:scaleType="center"
        android:background="@drawable/ic_forward"
        android:contentDescription="@string/forward"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/play"
        android:layout_toEndOf="@+id/play" />

    <ImageButton
        android:layout_width="26dp"
        android:layout_height="36dp"
        android:id="@+id/shuffle"
        android:scaleType="center"
        android:background="@drawable/ic_shuffle"
        android:contentDescription="@string/shuffle"
        android:layout_alignTop="@+id/textViewDateTime"
        android:layout_alignRight="@+id/seekBarMusic"
        android:layout_alignEnd="@+id/seekBarMusic" />

    <Button
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/senden"
        android:id="@+id/button2"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/listViewTeams"
        android:layout_marginStart="34dp"
        android:layout_alignEnd="@+id/listViewTeams" />

    <Button
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/laden"
        android:id="@+id/buttonLaden"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginStart="34dp" />


    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:id="@+id/map" />


</RelativeLayout>
